@@ -35,7 +35,7 @@ English
 	---------------------------------------------------------
 	Maintained by:	   Niels Leenheer (niels@creatype.nl)
 	Is up-to-date?	   Always
-	Last update:	   11 February 2003
+	Last update:	   12 February 2003
 	Translated files:  7
 	---------------------------------------------------------
 
@@ -74,7 +74,7 @@ Hungarian
 Italian
 	---------------------------------------------------------
 	Maintained by:	   Matteo Beccati (matteo@beccati.com)
-	Is up-to-date?	   Yes
+	Is up-to-date?	   No
 	Last update:	   11 February 2003
 	Translated files:  7 + 3 resource files
 	---------------------------------------------------------
